# SYCLops

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  syclops.cpp
include/: ConverterCodeGen.h
include/AKGCodeGen/: AKGBuilder.h  AKGCodeGen.h
include/MLIRCodeGen/: LLVMToMLIR.h  MLIRCodeGen.h
include/TrampolineBuilder/: TrampolineBuilder.h
include/Util/: ConverterUtil.h  Matcher.h  Preprocessing.h  SupportedSyclFuncs.inc
src/: ConverterCodeGen.cpp
src/AKGCodeGen/: AKGBuilder.cpp  AKGCodeGen.cpp
src/MLIRCodeGen/: LLVMToMLIR.cpp  MLIRCodeGen.cpp
src/TrampolineBuilder/: TrampolineBuilder.cpp
src/Util/: ConverterUtil.cpp  Matcher.cpp  Preprocessing.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test_common.hpp
test/dnn_kernels/: avgpool_2D.cpp  conv_2D.cpp  matmul_2D.cpp  maxpool_2D.cpp  simple_dnn_inference.cpp
test/static_usmbuffer_tests/: parallel_usmbuffer_kmeans.cpp  single_usmbuffer_offset_loads.cpp  single_usmbuffer_relu_16_32.cpp  single_usmbuffer_sigmoid_16_32_28_28.cpp  single_usmbuffer_vec_add_16_32.cpp
test/sycl_buffer_tests/: single_1dbuffer_vec_add_16_32.cpp
